# botty

./: Cargo.toml  README.md  config.json  openapi.json
.openapi-generator/: FILES
csharp-lib/: Org.OpenAPITools.sln  README.md
csharp-lib/.openapi-generator/: FILES
csharp-lib/api/: openapi.yaml
csharp-lib/docs/: AvailableBots.md  BotApi.md  BotControllerApi.md  BotInfo.md  BotsRequest.md  BulkUpdateResponse.md  ShowBotRequest.md
js-lib/: BotApi.md  BotControllerApi.md  index.ts
js-lib/.openapi-generator/: FILES
js-lib/apis/: BotApi.ts  BotControllerApi.ts
js-lib/auth/: auth.ts
js-lib/models/: AvailableBots.ts  BotInfo.ts  BotsRequest.ts  BulkUpdateResponse.ts  ObjectSerializer.ts  ShowBotRequest.ts  all.ts
js-lib/types/: ObjectParamAPI.ts  ObservableAPI.ts  PromiseAPI.ts
python-lib/: README.md  pyproject.toml  setup.py
python-lib/.openapi-generator/: FILES
python-lib/docs/: AvailableBots.md  BotApi.md  BotControllerApi.md  BotInfo.md  BotsRequest.md  BulkUpdateResponse.md  ShowBotRequest.md
python-lib/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python-lib/openapi_client/api/: __init__.py  bot_api.py  bot_controller_api.py
python-lib/openapi_client/models/: __init__.py  available_bots.py  bot_info.py  bots_request.py  bulk_update_response.py  show_bot_request.py
python-lib/test/: test_available_bots.py  test_bot_api.py  test_bot_controller_api.py  test_bot_info.py  test_bots_request.py  test_bulk_update_response.py  test_show_bot_request.py
src/: app_config.rs  client.rs  composer.rs  connection.rs  errors.rs  event.rs  main.rs  packet.rs  retro.rs  session.rs  web.rs
src/actions/: mod.rs  room.rs  web.rs
src/api/: api_session.rs  app_state.rs  bot.rs  health.rs  helper.rs  hotel.rs  mod.rs  task.rs
src/api/actions/: mod.rs  room.rs  web.rs
src/api/middleware/: auth.rs
src/api/service/: task.rs
src/client/: hotel.rs  mod.rs  room.rs  session.rs  state.rs  user_info.rs
src/client/room/: mod.rs  room.rs  user.rs
src/communication/: connection.rs  handler.rs  mod.rs  packet.rs
src/communication/incoming/: message.rs  messages.rs  mod.rs
src/communication/outgoing/: composer.rs
src/connection/: connector.rs  mod.rs  receiver.rs  sender.rs  session.rs
src/core/: mod.rs
src/core/taskmgr/: task.rs
src/event/: controller_factory.rs  handler.rs  messages.rs  mod.rs
src/event/controller/: authentication_ok.rs  handler.rs  mod.rs  ping.rs  room_load.rs  room_model.rs  room_user_status.rs  room_users.rs  user_info.rs
src/packet/: packet.rs  reader.rs  writer.rs
src/room/: event.rs  manager.rs  mod.rs  room.rs  user.rs
src/user/: manager.rs  mod.rs  user.rs
src/webapi/: api_session.rs  bot.rs  health.rs  hotel.rs  mod.rs  task.rs
(+73 files in other folders)
