[package]
name = "pegasus"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
futures-core = "0.3.30"
futures-sink = "0.3.30"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4.3"
bytes = "1.1.0"
async-trait = "0.1.50"
hyper = "*"
http = { version = "1", default-features = false, features = ["std"] }
anyhow = "1.0.81"
dashmap = "5.5.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"